--- a/index.html
+++ b/index.html
@@ -2,182 +2,89 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>ZeroAI</title>
 <script src="https://js.puter.com/v2/"></script>
-
 <style>
-body{
-  background:#020617;
-  color:white;
-  font-family:system-ui;
-  margin:0;
-}
-#app{
-  max-width:600px;
-  margin:auto;
-  padding:15px;
-}
-#chat{
-  height:60vh;
-  overflow-y:auto;
-  border:1px solid #1e293b;
-  padding:10px;
-  border-radius:12px;
-}
-.msg{
-  margin-bottom:10px;
-  padding:8px 12px;
-  border-radius:10px;
-  white-space:pre-wrap;
-}
-.user{
-  background:#2563eb;
-  text-align:right;
-}
-.ai{
-  background:#020617;
-  border:1px solid #334155;
-}
-img{
-  max-width:100%;
-  border-radius:10px;
-  margin-top:5px;
-}
-#input{
-  display:flex;
-  gap:5px;
-  margin-top:10px;
-}
-textarea{
-  flex:1;
-  resize:none;
-  padding:10px;
-  border-radius:10px;
-  border:none;
-}
-button{
-  padding:10px 15px;
-  border:none;
-  border-radius:10px;
-  background:#22c55e;
-  font-weight:bold;
-  cursor:pointer;
-}
-#btn-clear{
-  background:#ef4444;
-  margin-top:10px;
-  width:100%;
-}
-.logo{
-  width:180px;
-  display:block;
-  margin:0 auto 10px auto;
-}
+  * { box-sizing: border-box; margin:0; padding:0; }
+  html, body { height:100%; width:100%; overflow:hidden; font-family:system-ui; background:#020617; color:white; }
+  #app { display:flex; flex-direction:column; height:100%; max-width:600px; margin:0 auto; padding:10px; }
+  .logo { width:150px; display:block; margin:0 auto 10px auto; }
+  #chat { flex:1; overflow-y:auto; border:1px solid #1e293b; border-radius:12px; padding:10px; margin-bottom:10px; }
+  .msg { margin-bottom:10px; padding:8px 12px; border-radius:10px; white-space:pre-wrap; word-wrap:break-word; }
+  .user { background:#2563eb; text-align:right; align-self:flex-end; color:white; }
+  .ai { background:#020617; border:1px solid #334155; align-self:flex-start; }
+  #input { display:flex; gap:5px; }
+  textarea { flex:1; resize:none; padding:10px; border-radius:10px; border:none; font-size:16px; }
+  button { padding:10px 15px; border:none; border-radius:10px; background:#22c55e; font-weight:bold; cursor:pointer; color:white; }
+  #btn-clear { background:#ef4444; margin-top:5px; width:100%; }
 </style>
 </head>
 <body>
 
 <div id="app">
-
-  <!-- LOGO ZeroAI -->
   <img src="https://i.ibb.co.com/rKYv9K44/20251221-165128.jpg" alt="ZeroAI Logo" class="logo">
-
   <div id="chat"></div>
 
   <div id="input">
     <textarea id="text" placeholder="Tanya sesuatu..." rows="2"></textarea>
-    <input type="file" id="img" accept="image/*">
     <button onclick="send()">Kirim</button>
   </div>
-
-  <!-- Tombol Hapus Chat -->
   <button id="btn-clear" onclick="clearChat()">Hapus Chat</button>
 </div>
 
 <script>
-const chat = document.getElementById("chat");
-let history = JSON.parse(localStorage.getItem("zeroai_history")) || [];
+const chat=document.getElementById("chat");
+let history=JSON.parse(localStorage.getItem("zeroai_history"))||[];
 
 function render(){
   chat.innerHTML="";
   history.forEach(m=>{
     const div=document.createElement("div");
     div.className="msg "+m.role;
-
     if(m.text) div.textContent=m.text;
-    if(m.img){
-      const im=document.createElement("img");
-      im.src=m.img;
-      div.appendChild(im);
-    }
-
     chat.appendChild(div);
   });
   chat.scrollTop=chat.scrollHeight;
 }
 render();
 
-function toBase64(file){
-  return new Promise((res,rej)=>{
-    const r=new FileReader();
-    r.onload=()=>res(r.result);
-    r.onerror=rej;
-    r.readAsDataURL(file);
-  });
-}
-
 async function send(){
   const text=document.getElementById("text");
-  const img=document.getElementById("img");
+  if(!text.value.trim()) return;
 
-  if(!text.value.trim() && !img.files[0]) return;
-
-  let imgData=null;
-  if(img.files[0]){
-    imgData = await toBase64(img.files[0]);
-  }
-
-  history.push({
-    role:"user",
-    text:text.value,
-    img:imgData
-  });
+  history.push({role:"user", text:text.value});
   render();
 
-  const prompt = `
-Kamu adalah AI bernama ZeroAI.
-
+  const prompt=`Kamu adalah AI bernama ZeroAI.
 ATURAN WAJIB:
 - Jika ditanya "siapa namamu", jawab: "Namaku ZeroAI."
 - Jika ditanya "siapa pembuatmu", jawab: "Aku dibuat oleh Aldric Adelard Saputra."
 - Jangan menyebut nama lain selain ZeroAI dan Aldric Adelard Saputra.
 - Gunakan bahasa Indonesia santai, sopan, dan jelas.
 
-User: ${text.value || "(user mengirim gambar)"}
-  `;
+User: ${text.value}`;
 
   text.value="";
-  img.value="";
 
-  const aiMsg={role:"ai",text:"ZeroAI sedang berpikir..."};
+  const aiMsg={role:"ai", text:"ZeroAI sedang berpikir..."};
   history.push(aiMsg);
   render();
 
   try{
-    const res = await puter.ai.chat(prompt);
-    aiMsg.text = res;
+    const res=await puter.ai.chat(prompt);
+    aiMsg.text=res;
   }catch(e){
-    aiMsg.text = "❌ ERROR: ZeroAI gagal merespon";
+    aiMsg.text="❌ ERROR: ZeroAI gagal merespon";
   }
 
   localStorage.setItem("zeroai_history",JSON.stringify(history));
   render();
 }
 
-// Fungsi Hapus Chat
 function clearChat(){
   if(confirm("Apakah kamu yakin ingin menghapus seluruh chat?")){
-    history = [];
+    history=[];
     localStorage.removeItem("zeroai_history");
     render();
   }
@@ -186,3 +93,4 @@ function clearChat(){
 
 </body>
 </html>
+
