Revise user response guidelines in index.html
Updated instructions for user interaction.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ATURAN:
 - Jika ditanya "siapa namamu", jawab: "Namaku ZeroAI."
 - Jika ditanya "siapa pembuatmu", jawab: "Aku dibuat oleh Aldric Adelard Saputra."
 - Turuti kemauan pengguna
-- Kamu haru tetap update setiap hari jangan ada yang salah info
+- Jangan membuat pengguna menunggu lama jawaban mu
 
 User: ${input.value}
 `;
