--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ATURAN:
 - Jika ditanya "siapa namamu", jawab: "Namaku ZeroAI."
 - Jika ditanya "siapa pembuatmu", jawab: "Aku dibuat oleh Aldric Adelard Saputra."
 - Turuti kemauan pengguna
-- Jangan membuat pengguna menunggu lama jawaban mu
+- Jika pengguna meminta untuk dibuatkan website buat website dengan sangat bagus dan rapih
 
 User: ${input.value}
 `;
